--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cordova-android": "^7.0.0",
     "cordova-browser": "^5.0.3",
     "cordova-plugin-geolocation": "^4.0.1",
