--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -1,9 +1,9 @@
 {
   "background_color": "#FFF",
   "display": "standalone",
-  "name": "HelloCordova",
-  "short_name": "HelloCordova",
-  "version": "io.cordova.hellocordova",
+  "name": "Sun7tracker",
+  "short_name": "Sun7tracker",
+  "version": "io.cordova.Sun7tracker",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "author": "Apache Cordova Team",
   "icons": [],
