--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cordova-browser": "^5.0.3",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-whitelist": "1",
+    "moment": "^2.22.1",
     "vue": "^2.5.2",
     "vue-cordova": "^0.1.2",
     "vue2-leaflet": "^1.0.1"
